--- a/src/componentes/layout/Header.css
+++ b/src/componentes/layout/Header.css
@@ -34,6 +34,7 @@
         justify-content: center;
         align-items: center;
         gap: 40px;
+        font-size: 13px;
     }
 
     @media screen and (max-width: 768px) {
