--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,7 @@ a {
     gap: 40px;
     align-items: center;
     padding: 60px 20px;
+    font-size: 14px;
 
     .encabezado {
         display: flex;
