--- a/src/componentes/Modal.css
+++ b/src/componentes/Modal.css
@@ -9,7 +9,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow: scroll;
+    overflow: hidden;
 
     .modal {
         width: 90%;
@@ -55,7 +55,7 @@
             .info {
                 display: grid;
                 grid-template-rows: auto 1fr;
-                max-height: 90vw;
+                max-height: 90vh;
                 gap: 20px;
     
                 .head {
@@ -111,6 +111,7 @@
                 width: 80vw;
                 max-width: 400px;
                 overflow: scroll;
+                
 
                 .grid {
                     grid-template-columns: 1fr;
